<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.orgiu.architecture.ArchitectureActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_view_model"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onViewModelRequested"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_live_data"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onLiveDataRequested"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_livedata"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onAdvancedLiveDataRequested"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_view_model_live_data"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onViewModelLiveDataRequested"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_lifecycle_observing"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onLifecycleObservingActivityRequested"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_room"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onRoomActivityRequested"/>

</LinearLayout>
